--- a/front/restapi/src/styles/Signup.css
+++ b/front/restapi/src/styles/Signup.css
@@ -77,4 +77,8 @@
     margin-left: 4em; /* Adjust margin as needed */
     margin-right:4em
   }
+  .box-container {
+    margin-left: 1px; /* Adjust margin as needed */
+    
+  }
   
