--- a/front/restapi/src/styles/Signup.css
+++ b/front/restapi/src/styles/Signup.css
@@ -81,4 +81,8 @@
     margin-left: 1px; /* Adjust margin as needed */
     
   }
+  .password-input-container {
+    margin-left: 4em; /* Adjust margin as needed */
+    
+  }
   
