--- a/front/restapi/src/styles/Signup.css
+++ b/front/restapi/src/styles/Signup.css
@@ -83,7 +83,7 @@
   }
   .password-input-container1 {
     
-    margin-left: 4em; /* Adjust margin as needed */
+    margin-left: .5em; /* Adjust margin as needed */
     
   }
   
